[package]
name = "appcheck-backend"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = ">= 0.7"
base64 = ">= 0.22"
config = { version = ">= 0.14", default-features = false, features = ["toml"] }
http = "1"
http-serde = "2"
jwt-simple = ">= 0.12"
reqwest = { version = ">= 0.12", default-features=false, features = ["gzip", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tracing = ">= 0.1"
triggered = ">= 0.1"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
