[package]
name = "appcheck-backend"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "jwt-bearer"
path = "src/main.rs"

[dependencies]
axum = ">= 0.7"
base64 = ">= 0.22"
bs58 = "0"
clap = { version = "4", features = ["derive"] }
coarsetime = "*"
futures-util = ">= 0.3"
http = "1"
http-serde = "2"
jwt-simple = ">= 0.10"
reqwest = { version = ">= 0.11", default-features=false, features = ["gzip", "json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "1"
tower = ">= 0.4"
tracing = ">= 0.1"
triggered = ">= 0.1"
tokio = { version = "1", features = ["rt-multi-thread", "signal"] }
